WIP : connecteurs de paiement BitriPay et KODA en cours
Instantané intermédiaire non vérifié.
